fix: Scroll horizontally on mobile

--- a/www/assets/scss/base.scss
+++ b/www/assets/scss/base.scss
@@ -6,7 +6,7 @@ body {
   font-size: 16px;
 
   overflow-y: hidden;
-  overflow-x: hidden;
+  overflow-x: auto;
 
   scroll-behavior: smooth;
   scroll-snap-type: x mandatory;
